manifests/contrib/rustfs/base/rustfs-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rustfs
  labels:
    app: rustfs
    component: objectstorage
spec:
  serviceName: rustfs
  replicas: 1
  selector:
    matchLabels:
      app: rustfs
  template:
    metadata:
      labels:
        app: rustfs
        component: objectstorage
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: rustfs-data
      containers:
      - name: rustfs
        image: rustfs/rustfs:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 9000
          protocol: TCP
        - name: console
          containerPort: 9001
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 50m
            memory: 128Mi
        volumeMounts:
        - name: data
          mountPath: /data
